@@ -3,7 +3,9 @@
   <groupId>com.qinzj</groupId>
   <artifactId>spring</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+  <packaging>war</packaging>
+ 
+ 
   <properties>
   	<spring.version>5.2.1.RELEASE</spring.version>
   </properties>
@@ -22,6 +24,11 @@
 	    <artifactId>spring-context</artifactId>
 	    <version>${spring.version}</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.springframework</groupId>
+	    <artifactId>spring-web</artifactId>
+	    <version>${spring.version}</version>
+	</dependency>
 	<!-- <dependency>
 	    <groupId>org.springframework</groupId>
 	    <artifactId>spring-beans</artifactId>
@@ -37,7 +44,6 @@
 	    <artifactId>spring-aop</artifactId>
 	    <version>${spring.version}</version>
 	</dependency> -->
-	<!-- 
 	<dependency>
 	    <groupId>commons-logging</groupId>
 	    <artifactId>commons-logging</artifactId>
@@ -59,9 +65,8 @@
 	    <artifactId>commons-dbcp</artifactId>
 	    <version>1.4</version>
 	</dependency>
-	 -->
 	<!-- <dependency>
-	    <groupId>com.oracle</groupId>
+	    <groupId>ojdbc</groupId>
 	    <artifactId>ojdbc</artifactId>
 	    <version>14</version>
 	</dependency> -->
@@ -75,7 +80,24 @@
 	    <artifactId>aspectjweaver</artifactId>
 	    <version>1.9.4</version>
 	</dependency>
-				
+	<dependency>
+		<groupId>javax.servlet</groupId>
+		<artifactId>javax.servlet-api</artifactId>
+		<version>3.1.0</version>
+		<scope>provided</scope>
+	</dependency>	
+	<!-- <dependency>
+	    <groupId>javax.servlet</groupId>
+	    <artifactId>jsp-api</artifactId>
+	    <version>2.0</version>
+	    <scope>provided</scope>
+	</dependency> -->
+			
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.6</version>
+	</dependency>
 		
 	
   </dependencies>
@@ -92,6 +114,22 @@
   				<encoding>UTF-8</encoding>
   			</configuration>
   		</plugin>
+  		
+  		<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<configuration>
+					<port>8080</port>
+					<path>/spring</path>
+					<argLine>-Xmx1024M -XX:MaxPermSize=1024m</argLine>
+					<systemProperties>
+						<spring.profiles.active>development</spring.profiles.active>
+					</systemProperties>
+					<useTestClasspath>true</useTestClasspath>
+					<uriEncoding>UTF-8</uriEncoding>
+				</configuration>
+			</plugin>
+  		
   	</plugins>
   </build>
   
